<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listar">

    <fragment
        android:id="@+id/nav_cargar"
        android:name="com.example.tp4moviles.ui.cargar.CargarProductoFragment"
        android:label="@string/menu_cargar"
        tools:layout="@layout/fragment_cargar_producto" />

    <fragment
        android:id="@+id/nav_listar"
        android:name="com.example.tp4moviles.ui.listar.ListarProductosFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar_productos" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.tp4moviles.ui.salir.SalirFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />
</navigation>
